KAFKA-20952: Address review feedback
Signed-off-by: Arnab Nandy <arnab_nandy7@yahoo.com>